add and fix lib

--- a/weekcalendar/build.gradle
+++ b/weekcalendar/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'com.android.library'
-apply plugin: 'com.jfrog.bintray'
-apply plugin: 'com.github.dcendents.android-maven'
+apply from: '../config.gradle'
 
 android {
     compileSdkVersion 25
@@ -48,26 +47,26 @@ task generateJavaDocsJar(type: Jar) {
 }
 generateJavaDocsJar.dependsOn generateJavaDocs
 
-bintray {
-    user = 'nomanrafique'
-    key = 'KEY'
-    pkg {
-        repo = 'maven'
-        name = 'weekcalendar'
-
-        version {
-            name = '1.0.6'
-            desc = 'WeekCalendar'
-            released  = new Date()
-            vcsTag = '1.0.6'
-        }
-
-        licenses = ['Apache-2.0']
-        vcsUrl = 'https://github.com/nomanr/WeekCalendar.git'
-        websiteUrl = 'https://github.com/nomanr/WeekCalendar'
-    }
-    configurations = ['archives']
-}
+//bintray {
+//    user = 'nomanrafique'
+//    key = 'KEY'
+//    pkg {
+//        repo = 'maven'
+//        name = 'weekcalendar'
+//
+//        version {
+//            name = '1.0.6'
+//            desc = 'WeekCalendar'
+//            released  = new Date()
+//            vcsTag = '1.0.6'
+//        }
+//
+//        licenses = ['Apache-2.0']
+//        vcsUrl = 'https://github.com/nomanr/WeekCalendar.git'
+//        websiteUrl = 'https://github.com/nomanr/WeekCalendar'
+//    }
+//    configurations = ['archives']
+//}
 
 artifacts {
     archives generateJavaDocsJar
